force-app/main/default/objects/Public_Relations__c/Public_Relations__c.object-meta.xml
<CustomObject>
    <label>Public Relation</label>
    <nameField>
        <label>PR event name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Public Relations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>