force-app/main/default/objects/Public_Relations__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <label>Contact_Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>