force-app/main/default/objects/Public_Relations__c/fields/Course_Of_Action_To_Be_Taken__c.field-meta.xml
<CustomField>
    <fullName>Course_Of_Action_To_Be_Taken__c</fullName>
    <description>How the company intends to deal with the scandal</description>
    <label>Course Of Action To Be Taken</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>