force-app/main/default/objects/Public_Relations__c/fields/Idol_Group__c.field-meta.xml
<CustomField>
    <fullName>Idol_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Idol Group</label>
    <referenceTo>Idol_Group__c</referenceTo>
    <relationshipLabel>Public Relations</relationshipLabel>
    <relationshipName>Public_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>