force-app/main/default/objects/Public_Relations__c/fields/Nature_of_the_Event__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_the_Event__c</fullName>
    <label>Nature of the Event</label>
    <type>TextArea</type>
</CustomField>