force-app/main/default/objects/Public_Relations__c/fields/Other_Parties_Involved__c.field-meta.xml
<CustomField>
    <fullName>Other_Parties_Involved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Scandals if there is another party involved in the incident we need to get into contact with</description>
    <label>Other Parties Involved?</label>
    <type>Checkbox</type>
</CustomField>