force-app/main/default/objects/Public_Relations__c/fields/Short_Description_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Short_Description_of_Contact__c</fullName>
    <label>Short Description of Contact</label>
    <length>250</length>
    <type>Text</type>
</CustomField>