force-app/main/default/objects/Public_Relations__c/recordTypes/Publicity.recordType-meta.xml
<RecordType>
    <fullName>Publicity</fullName>
    <active>true</active>
    <label>Publicity</label>
</RecordType>