force-app/main/default/objects/Public_Relations__c/recordTypes/Scandal.recordType-meta.xml
<RecordType>
    <fullName>Scandal</fullName>
    <active>true</active>
    <label>Scandal</label>
</RecordType>